package modelo;

import java.util.ArrayList;

public class Biblioteca implements GestionBiblioteca {

    private ArrayList<Libro> libros;
    private ArrayList<Usuario> usuarios;
    private ArrayList<Prestamo> prestamos;

    public Biblioteca() {
        this.libros = new ArrayList<>();
        this.usuarios = new ArrayList<>();
        this.prestamos = new ArrayList<>();
    }

    @Override
    public void agregarLibro(Libro libro) {
        if (libro == null) {
            throw new IllegalArgumentException("El libro no puede ser nulo.");
        }

        if (buscarLibroPorCodigo(libro.getCodigo()) != null) {
            throw new IllegalArgumentException("Ya existe un libro registrado con el codigo " + libro.getCodigo() + ".");
        }

        libros.add(libro);
    }

    @Override
    public void agregarUsuario(Usuario usuario) {
        if (usuario == null) {
            throw new IllegalArgumentException("El usuario no puede ser nulo.");
        }

        if (buscarUsuarioPorId(usuario.getId()) != null) {
            throw new IllegalArgumentException("Ya existe un usuario registrado con el id " + usuario.getId() + ".");
        }

        usuarios.add(usuario);
    }

    public Libro buscarLibroPorCodigo(String codigo) {
        if (codigo == null) {
            return null;
        }

        for (Libro libro : libros) {
            if (libro.getCodigo().equalsIgnoreCase(codigo)) {
                return libro;
            }
        }

        return null;
    }

    public Usuario buscarUsuarioPorId(String id) {
        if (id == null) {
            return null;
        }

        for (Usuario usuario : usuarios) {
            if (usuario.getId().equalsIgnoreCase(id)) {
                return usuario;
            }
        }

        return null;
    }

    @Override
    public Prestamo registrarPrestamo(String idUsuario, String codigoLibro) {
        Usuario usuario = buscarUsuarioPorId(idUsuario);

        if (usuario == null) {
            throw new IllegalArgumentException("No existe un usuario registrado con el id " + idUsuario + ".");
        }

        Libro libro = buscarLibroPorCodigo(codigoLibro);

        if (libro == null) {
            throw new IllegalArgumentException("No existe un libro registrado con el codigo " + codigoLibro + ".");
        }

        if (!libro.estaDisponible()) {
            throw new IllegalArgumentException("El libro con codigo " + codigoLibro + " no esta disponible.");
        }

        Prestamo prestamo = new Prestamo(usuario, libro);
        prestamos.add(prestamo);

        return prestamo;
    }

    @Override
    public void devolverLibro(String codigoLibro) {
        Prestamo prestamoActivo = buscarPrestamoActivoPorCodigoLibro(codigoLibro);

        if (prestamoActivo == null) {
            throw new IllegalArgumentException("No existe un prestamo activo para el libro con codigo " + codigoLibro + ".");
        }

        prestamoActivo.finalizar();
    }

    private Prestamo buscarPrestamoActivoPorCodigoLibro(String codigoLibro) {
        if (codigoLibro == null) {
            return null;
        }

        for (Prestamo prestamo : prestamos) {
            boolean mismoLibro = prestamo.getLibro().getCodigo().equalsIgnoreCase(codigoLibro);

            if (mismoLibro && prestamo.estaActivo()) {
                return prestamo;
            }
        }

        return null;
    }

    @Override
    public ArrayList<Libro> listarLibros() {
        return new ArrayList<>(libros);
    }

    @Override
    public ArrayList<Usuario> listarUsuarios() {
        return new ArrayList<>(usuarios);
    }

    @Override
    public ArrayList<Prestamo> listarPrestamosActivos() {
        ArrayList<Prestamo> activos = new ArrayList<>();

        for (Prestamo prestamo : prestamos) {
            if (prestamo.estaActivo()) {
                activos.add(prestamo);
            }
        }

        return activos;
    }

    @Override
    public ArrayList<Libro> listarLibrosDisponibles() {
        ArrayList<Libro> disponibles = new ArrayList<>();

        for (Libro libro : libros) {
            if (libro.estaDisponible()) {
                disponibles.add(libro);
            }
        }

        return disponibles;
    }

    @Override
    public ArrayList<Libro> buscarLibrosPorTitulo(String tituloBuscado) {
        ArrayList<Libro> resultados = new ArrayList<>();

        if (tituloBuscado == null || tituloBuscado.trim().isEmpty()) {
            return resultados;
        }

        String tituloNormalizado = tituloBuscado.trim().toLowerCase();

        for (Libro libro : libros) {
            if (libro.getTitulo().toLowerCase().contains(tituloNormalizado)) {
                resultados.add(libro);
            }
        }

        return resultados;
    }
}